Failed assert in ui_paneltype_draw_impl while opening a viewport panel #78455

Closed
opened 2020-06-30 09:59:42 +02:00 by Ankit Meel · 6 comments
Member

System Information
Operating system: Darwin 18
Graphics card: Intel HD 6000

Blender Version
Broken: b29fd7bab8

Short description of error

0   Blender BLI_system_backtrace + 52
1   Blender ui_paneltype_draw_impl + 325
2   Blender UI_paneltype_draw + 71
3   Blender ui_item_paneltype_func + 45
4   Blender ui_block_func_POPOVER + 141
5   Blender ui_popup_block_refresh + 344
6   Blender ui_popup_block_create + 496
7   Blender ui_popover_panel_create + 310
8   Blender ui_block_open_begin + 968
9   Blender button_activate_state + 1126
10  Blender ui_do_but_BLOCK + 405
11  Blender ui_do_button + 2709
12  Blender ui_handle_button_event + 1052
13  Blender ui_region_handler + 330
14  Blender wm_handler_ui_call + 532
15  Blender wm_handlers_do_intern + 715
16  Blender wm_handlers_do + 40
17  Blender wm_event_do_handlers + 2978
18  Blender WM_main + 39
19  Blender main + 1283
20  libdyld.dylib start + 1
21  ??? 0x0 + 1
BLI_assert failed: blender/source/blender/editors/interface/interface_layout.c:5579, ui_paneltype_draw_impl(), at 'panel->runtime.custom_data_ptr = ((void*)0)'

Exact steps for others to reproduce the error
Try to open Viewport overlays panel, or gizmos panel or shading panel.

**System Information** Operating system: Darwin 18 Graphics card: Intel HD 6000 **Blender Version** Broken: b29fd7bab8 **Short description of error** ``` 0 Blender BLI_system_backtrace + 52 1 Blender ui_paneltype_draw_impl + 325 2 Blender UI_paneltype_draw + 71 3 Blender ui_item_paneltype_func + 45 4 Blender ui_block_func_POPOVER + 141 5 Blender ui_popup_block_refresh + 344 6 Blender ui_popup_block_create + 496 7 Blender ui_popover_panel_create + 310 8 Blender ui_block_open_begin + 968 9 Blender button_activate_state + 1126 10 Blender ui_do_but_BLOCK + 405 11 Blender ui_do_button + 2709 12 Blender ui_handle_button_event + 1052 13 Blender ui_region_handler + 330 14 Blender wm_handler_ui_call + 532 15 Blender wm_handlers_do_intern + 715 16 Blender wm_handlers_do + 40 17 Blender wm_event_do_handlers + 2978 18 Blender WM_main + 39 19 Blender main + 1283 20 libdyld.dylib start + 1 21 ??? 0x0 + 1 BLI_assert failed: blender/source/blender/editors/interface/interface_layout.c:5579, ui_paneltype_draw_impl(), at 'panel->runtime.custom_data_ptr = ((void*)0)' ``` **Exact steps for others to reproduce the error** Try to open Viewport overlays panel, or gizmos panel or shading panel.
Author
Member

Added subscriber: @ankitm

Added subscriber: @ankitm
Author
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

Added subscriber: @antoniov

Added subscriber: @antoniov

I can confirm on Windows with NVIDIA card.

I can confirm on Windows with NVIDIA card.

This issue was referenced by 4176adaf96

This issue was referenced by 4176adaf96385bf81e333677fbcb681ca1a79df7
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Julian Eisel self-assigned this 2020-06-30 10:49:19 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#78455
No description provided.