Fix T78455: Failed assert when opening a viewport panel

Mistake from 1fa40c9f8a810.