source/blender/editors/interface/interface_layout.c
@@ -5576,7 +5576,7 @@ static void ui_paneltype_draw_impl(bContext *C, PanelType *pt, uiLayout *layout,
   panel->layout = layout;
   pt->draw(C, panel);
   panel->layout = NULL;
-  BLI_assert(panel->runtime.custom_data_ptr = NULL);
+  BLI_assert(panel->runtime.custom_data_ptr == NULL);
 
   MEM_freeN(panel);
 
